--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1868,7 +1868,8 @@ section {
 .hero {
   width: 100%;
   position: relative;
-  background: var(--color-primary);
+  /* background: var(--color-primary); */
+  background-image: url(../../images/pattern-bg-desktop.png);
   padding: 60px 0 0 0;
 }
 
